--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="tudo">
         <section class="menu">
             <div class="menu__header">
-                <img class="menu__header_img" src="assets/vector.png">
+                <img class="menu__header_img" src="assets/assets/vector.png">
                 <span><strong>Mauricio Gabriel Altamirano</strong></span>
             </div>
             <ul class="menu__list">
@@ -33,15 +33,15 @@
     <!-- Sección del Header/Title/Hero -->
     <section class="title">
         <div class="title__div">
-            <img class="title__profile" src="assets/perfil.png">
+            <img class="title__profile" src="assets/assets/perfil.png">
             <div class="title__container">
                 <h2 class="title__bio">Hola, mi nombre es Mauricio Gabriel Altamirano y soy un estudiante de Desarrollo de Software</h2>
                 <h3 class="title__subsection">Soy formado en el Instituto Superior Blas Pascal y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</h3>
                 <ul class="title__network">
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
-                    <li class="title__network__item"><a href="https://github.com/maualtamirano">Github <img src="assets\arrow.png"> </a></li>
-                    <li class="title__network__item"><a href="https://www.linkedin.com/in/mauricio-gabriel-altamirano-526ba8248/">Linkedin <img src="assets\arrow.png"></a></li>
-                    <li class="title__network__item"><a href="assets/CV.pdf">Currículo <img src="assets\arrow.png"></a></li>
+                    <li class="title__network__item"><a href="https://github.com/maualtamirano">Github <img src="assets/assets/arrow.png"> </a></li>
+                    <li class="title__network__item"><a href="https://www.linkedin.com/in/mauricio-gabriel-altamirano-526ba8248/">Linkedin <img src="assets/assets/arrow.png"></a></li>
+                    <li class="title__network__item"><a href="assets/CV.pdf">Currículo <img src="assets/assets/arrow.png"></a></li>
                 </ul>
             </div>
         </div>
@@ -62,42 +62,42 @@
             <div class="skills__line">
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img src="assets\htlm.png"></li>
+                        <li class="skills__img"><img src="assets/assets/htlm.png"></li>
                         <li class="skills__name"> HTML 5</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\js_icon.png" alt=""></li>
+                        <li class="skills__img"> <img src="assets/assets/js_icon.png"></li>
                         <li class="skills__name">Javascript</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets/java_icon.png" alt=""></li>
+                        <li class="skills__img"> <img src="assets/assets/java_icon.png"></li>
                         <li class="skills__name">Java</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img src="assets\nodejs_icon.png" alt=""></li>
+                        <li class="skills__img"><img src="assets/assets/nodejs_icon.png"></li>
                         <li class="skills__name">Node JS</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\react_icon.png" alt=""> </li>
+                        <li class="skills__img"> <img src="assets/assets/react_icon.png"> </li>
                         <li class="skills__name">React</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\css_icon.png" alt=""> </li>
+                        <li class="skills__img"> <img src="assets/assets/css_icon.png"> </li>
                         <li class="skills__name">CSS</li>
                     </ul>
                 </div>
@@ -110,35 +110,35 @@
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets/libro-icon.png" alt="Imagen libro"></li>
+                        <li class="hobbies__img"> <img src="assets/assets/libro-icon.png" alt="Imagen libro"></li>
                         <li class="hobbies__name">Leer Libros</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\headphones_icon.png" alt="Imagen musica"></li>
+                        <li class="hobbies__img"> <img src="assets/assets/headphones_icon.png" alt="Imagen musica"></li>
                         <li class="hobbies__name">Oir música</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"><img src="assets\tv_icon.png" alt="Imagen series"></li>
+                        <li class="hobbies__img"><img src="assets/assets/tv_icon.png" alt="Imagen series"></li>
                         <li class="hobbies__name">Ver séries</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\forkspoon_icon.png" alt="Imagen Cocinar"> </li>
+                        <li class="hobbies__img"> <img src="assets/assets/forkspoon_icon.png" alt="Imagen Cocinar"> </li>
                         <li class="hobbies__name">Cocinar</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul>
-                        <li class="hobbies__img"> <img src="assets\camera_icon.png" alt="imagen Fotos"> </li>
+                        <li class="hobbies__img"> <img src="assets/assets/camera_icon.png" alt="imagen Fotos"> </li>
                         <li class="hobbies__name">Tomar fotos</li>
                     </ul>
                 </div>
@@ -152,7 +152,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets/logo-escSecu.png" alt= "IPEM N°31 Padre Brochero_logo"></li>
+                    <li class="academic__courses__item__img"><img src="assets/assets/logo-escSecu.png" alt= "IPEM N°31 Padre Brochero_logo"></li>
                     <li class="academic__courses__item__title"><h4>Bachiller en Economia y Administración</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2021 - IPEM N°31 "Padre Brochero"</p></li>
                 </ul>
@@ -160,7 +160,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\alura_logo.png" alt="alura_logo"></li>
+                    <li class="academic__courses__item__img"><img src="assets/assets/alura_logo.png" alt="alura_logo"></li>
                     <li class="academic__courses__item__title"><h4>Formación en FrontEnd</h4></li>
                     <li class="academic__courses__item__subtitle"><p>En Curso - Alura</p></li>
                 </ul>
@@ -168,7 +168,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!-- Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets/logo-TeensInstitute.jpg" alt="logo-TeensInstitute"></li>
+                    <li class="academic__courses__item__img"><img src="assets/assets/logo-TeensInstitute.jpg" alt="logo-TeensInstitute"></li>
                     <li class="academic__courses__item__title"><h4>Curso de Ingles Intermedio</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2021 - Teens Institute</p></li>
                 </ul>
@@ -182,7 +182,7 @@
 
     <div class="experiencie__box">
         <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-        <img class="experience__img" src="assets/imagen-encriptador.png">
+        <img class="experience__img" src="assets/assets/imagen-encriptador.png">
         <div class="experience__info">
             <h2 class="experience__title">Encriptador de texto</h2>
             <h3 class="experience__text">Challenge Alura Codificador</h3>
@@ -196,7 +196,7 @@
 
     <div class="experiencie__box">
         <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-        <img class="experience__img" src="assets/imagen-juegoNumeroSecreto.png">
+        <img class="experience__img" src="assets/assets/imagen-juegoNumeroSecreto.png">
         <div class="experience__info">
             <h2 class="experience__title">Juego creado con HTML y JavaScript</h2>
             <h3 class="experience__text">Actividad Curso Alura</h3>
@@ -214,7 +214,7 @@
         <section class="formcontato" id="contacto">
             <div  class="formcontato__contacto">
                 <div class="formcontato--esquerda">
-                    <img class="formcontato__img" src="assets\contact_image.png">
+                    <img class="formcontato__img" src="assets/assets/contact_image.png">
                 </div>
                 <div class="formcontato__text">
                     <h2 class="formcontato__title">Contacto</h2>
