--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                      <!-- Pon los enlaces de tus redes sociales favoritas -->
                     <li class="title__network__item"><a href="https://github.com/maualtamirano">Github <img src="assets/assets/arrow.png"> </a></li>
                     <li class="title__network__item"><a href="https://www.linkedin.com/in/mauricio-gabriel-altamirano-526ba8248/">Linkedin <img src="assets/assets/arrow.png"></a></li>
-                    <li class="title__network__item"><a href="assets/CV.pdf">Currículo <img src="assets/assets/arrow.png"></a></li>
+                    <li class="title__network__item"><a href="assets/assets/CV.pdf">Currículo <img src="assets/assets/arrow.png"></a></li>
                 </ul>
             </div>
         </div>
